# SimpleRobot-ROS2

./: .gitignore
demo_reports/2026-06-12_05-03-58/: run_log.csv
demo_reports/2026-06-12_05-51-43/: obstacle_points.csv  run_log.csv
demo_reports/2026-06-12_05-54-42/: obstacle_points.csv  run_log.csv
demo_reports/controller_calibration/: controller_calibration_summary.csv  controller_parameter_log.csv
demo_reports/controller_calibration/PID_rotation_2026-06-13_09-23-29/: controller_run_log.csv
demo_reports/motor_calibration/: motor_calibration_log.csv  motor_calibration_summary.csv
src/simplerobot_car/: package.xml  setup.cfg  setup.py
src/simplerobot_car/config/: lane_controller.yaml
src/simplerobot_car/launch/: simplerobot_lane_lidar_demo.launch.py  simplerobot_lidar_demo.launch.py
src/simplerobot_car/rviz/: simplerobot_lane_lidar.rviz  simplerobot_lidar.rviz
src/simplerobot_car/simplerobot_car/: camera_record_node.py  cmdvel_odom_node.py  controller_calib_gui_node.py  drive_capture_node.py  drive_record_node.py  lane_backstepping_pd.py  lane_lidar_follower_node.py  lane_parser_node.py  lidar_avoidance_node.py  line_camera_target_node.py  motor_calib_gui_node.py  path_visualizer_node.py  run_report_node.py
