<?xml version="1.0"?>
<package format="3">
  <name>simplerobot_car</name>
  <version>0.0.1</version>
  <description>SimpleRobot lane following and control package</description>
  <maintainer email="datnvan.021504@gmail.com">blueDstar</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
